--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,25 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>eus.ixa</groupId>
-            <artifactId>ixa-pipe-pos</artifactId>
-            <version>1.4.6</version>
+            <groupId>com.github.ixa-ehu</groupId>
+            <artifactId>kaflib-naf</artifactId>
+            <version>1.1.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.6.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>eus.ixa</groupId>
+            <artifactId>ixa-pipe-nerc</artifactId>
+            <version>1.5.2</version>
         </dependency>
     </dependencies>
 
